Allow for big intensity values

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ data/Nucleus Accumbens/Nucleus Accumbens/proteinGroups_filtered.txt
 data/Striatum/peptides.txt
 data/Striatum/proteinGroups.txt
 data/Striatum/proteinGroups_filtered.txt
+.Rhistory
