--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ data/breast cancer/proteinGroups_CycLoess.txt
 data/spike-in/Original Paper.url
 data/spike-in/archive/proteinGroups_iBAQ_INPUT.txt
 data/spike-in/archive/proteinGroups_iBAQ_INPUT_UPSproteins.txt
+data/meth/~$meta.xlsx
