--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ savedData_meth.Rdata
 savedData_bccl.Rdata
 data/spike-in/spiked-in_normalized.txt
 readme/readme.docx
+readme/peptide example.xlsx
+readme
